--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -278,3 +278,27 @@ series:
         dtstart: 2021-11-11 09:00:00+01:00
         dtend: 2021-11-11 10:00:00+01:00
       image: https://secure.meetupstatic.com/photos/event/c/5/3/600_499743155.jpeg
+  - meetupcom:
+      meta_description: 'Tue, Nov 16, 2021, 9:00 AM: REGISTRACE ZDE: https://www.datascript.cz/morning-talks/dynamicka-infrastruktura-v-consulu/Na co se můžete těšit:V měnící se infrastruktuře je těžké udržovat seznam služeb '
+      og_title: Dynamická infrastruktura v Consulu
+      image: https://secure.meetupstatic.com/photos/event/c/6/1/600_499743169.jpeg
+      url: https://www.meetup.com/Morning-Talks/events/281648112/
+      ical:
+        summary: Dynamická infrastruktura v Consulu
+        description: 'Morning Talks
+
+          Tuesday, November 16 at 9:00 AM
+
+
+          REGISTRACE ZDE: https://www.datascript.cz/morning-talks/dynamicka-infrastruktura-v-consulu/ Na co se můžete těšit: V měnící se infrastruktuře je těžké...\n
+
+          https://www.meetup.com/Morning-Talks/events/281648112/'
+        location: null
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281648112@meetup.com
+        url: https://www.meetup.com/Morning-Talks/events/281648112/
+        dtstart: 2021-11-16 09:00:00+01:00
+        dtend: 2021-11-16 10:00:00+01:00
