--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -154,7 +154,7 @@ series:
   - meetupcom:
       meta_description: 'Tue, Nov 2, 2021, 6:30 PM: Get out and get social in 2021 : come out and discuss JS together!Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that are'
       og_title: '2021 #2 Optimization Techniques'
-      image: https://secure.meetupstatic.com/photos/event/e/8/f/c/600_455639644.jpeg
+      image: https://secure.meetupstatic.com/photos/event/6/0/f/0/600_499764816.jpeg
       url: https://www.meetup.com/praguejs/events/267847681/
       ical_raw:
       - BEGIN:VCALENDAR
@@ -213,7 +213,7 @@ series:
 
 
           https://www.meetup.com/praguejs/events/267847681/'
-        location: null
+        location: Studio Prám (Čerpadlová 536/4, Praha 9-Vysočany, Czech Republic 190 00)
         geo:
           lat: 50.08
           lon: 14.43
