--- a/data/sources/brno-java-meetup.yaml
+++ b/data/sources/brno-java-meetup.yaml
@@ -104,3 +104,28 @@ series:
         url: https://www.meetup.com/Brno-Java-Meetup/events/270104465/
         dtstart: 2020-04-23 15:30:00+02:00
         dtend: 2020-04-23 16:30:00+02:00
+  - meetupcom:
+      meta_description: 'Thu, Nov 4, 2021, 6:30 PM: Brno Java MeetUp je po více než roce zpátky. Děkujeme všem, co vyplnili dotazník. Dle výsledků celkem jednoznačně zvítězilo téma “JVM a Kubernetes”.Praktickou přednášku na t'
+      og_title: JVM a Kubernetes
+      image: https://secure.meetupstatic.com/photos/event/6/4/d/7/600_499765815.jpeg
+      url: https://www.meetup.com/Brno-Java-Meetup/events/281669937/
+      ical:
+        summary: JVM a Kubernetes
+        description: 'Brno Java Meetup
+
+          Thursday, November 4 at 6:30 PM
+
+
+          Brno Java MeetUp je po více než roce zpátky. Děkujeme všem, co vyplnili dotazník. Dle výsledků celkem jednoznačně zvítězilo téma “JVM a Kubernetes”.  ...
+
+
+          https://www.meetup.com/Brno-Java-Meetup/events/281669937/'
+        location: Živo U Palečka (Koliště 643, Brno-střed, Czech Republic 602 00)
+        geo:
+          lat: 49.2
+          lon: 16.61
+        status: CONFIRMED
+        uid: event_281669937@meetup.com
+        url: https://www.meetup.com/Brno-Java-Meetup/events/281669937/
+        dtstart: 2021-11-04 18:30:00+01:00
+        dtend: 2021-11-04 20:30:00+01:00
