--- a/data/sources/the-social-programmers.yaml
+++ b/data/sources/the-social-programmers.yaml
@@ -80,3 +80,28 @@ series:
         url: https://www.meetup.com/the-social-programers/events/281374093/
         dtstart: 2021-10-14 18:30:00+02:00
         dtend: 2021-10-14 20:30:00+02:00
+  - meetupcom:
+      meta_description: 'Wed, Oct 27, 2021, 6:30 PM: Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.'
+      og_title: Coding session V4
+      image: https://secure.meetupstatic.com/photos/event/6/6/8/d/600_498986253.jpeg
+      url: https://www.meetup.com/the-social-programers/events/281669240/
+      ical:
+        summary: Coding session V4
+        description: 'The Social Programers
+
+          Wednesday, October 27 at 6:30 PM
+
+
+          Let''s have a beer and code together and build something interesting. Work on your own project or join in on the group project.
+
+
+          https://www.meetup.com/the-social-programers/events/281669240/'
+        location: Le due torri (Dukelských Hrdinů 46, 170 00 Praha 7-Holešovice, Prague, Czech Republic)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281669240@meetup.com
+        url: https://www.meetup.com/the-social-programers/events/281669240/
+        dtstart: 2021-10-27 18:30:00+02:00
+        dtend: 2021-10-27 21:30:00+02:00
