--- a/data/sources/api-prague.yaml
+++ b/data/sources/api-prague.yaml
@@ -30,3 +30,28 @@ series:
         url: https://www.meetup.com/api-prague/events/280531427/
         dtstart: 2021-09-16 18:00:00+02:00
         dtend: 2021-09-16 22:00:00+02:00
+  - meetupcom:
+      meta_description: 'Mon, Nov 8, 2021, 4:00 PM: Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any proxies and gateways betwee'
+      og_title: APIs without the Pain 🚀 Superface Intro Webinar
+      image: https://secure.meetupstatic.com/photos/event/b/1/9/6/600_499785462.jpeg
+      url: https://www.meetup.com/api-prague/events/281693311/
+      ical:
+        summary: APIs without the Pain 🚀 Superface Intro Webinar
+        description: 'API Prague: The people and tech behind open APIs
+
+          Monday, November 8 at 4:00 PM
+
+
+          Integrate APIs with Superface in 3 lines of code. Your applications will self-integrate (and maintain the integrations) autonomously, without any prox...
+
+
+          https://www.meetup.com/api-prague/events/281693311/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_281693311@meetup.com
+        url: https://www.meetup.com/api-prague/events/281693311/
+        dtstart: 2021-11-08 16:00:00+01:00
+        dtend: 2021-11-08 17:30:00+01:00
