data: cron update

--- a/data/sources/naswp-cz.yaml
+++ b/data/sources/naswp-cz.yaml
@@ -156,7 +156,7 @@ series:
         dtstart: 2021-10-27 18:30:00+02:00
         dtend: 2021-10-27 21:30:00+02:00
   - meetupcom:
-      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.🖐Chcete přednášet na příštím WP pivu? Rádi vás '
+      meta_description: 'Wed, Nov 24, 2021, 6:30 PM: Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity.📢 Program bude upřesněn.– 18:30 Úvodní slovo a novinky ze světa WordPres'
       og_title: 'WordPress Pivo #7'
       image: https://secure.meetupstatic.com/photos/event/6/5/4/f/600_499585935.jpeg
       url: https://www.meetup.com/naswp-cz/events/281507008/
@@ -166,7 +166,7 @@ series:
 
           Wednesday, November 24 at 6:30 PM\n
 
-          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program bude upřesněn. 🖐Chcete přednášet na příš...
+          Pojďte si s námi sednout alespoň virtuálně a zúčastnit se online srazu české wordpressové komunity. 📢 Program bude upřesněn. – 18:30 Úvodní slovo a no...
 
 
           https://www.meetup.com/naswp-cz/events/281507008/'
